faq animation 1000 + sections opacity to 0.8

--- a/energie/index.html
+++ b/energie/index.html
@@ -80,7 +80,7 @@
                 <a id="about-link" class="text-clickable link" href="../about/" target="_blank" tabindex="0" aria-label="Qui sommes nous?" onfocus="drop_down_services_out()">Qui sommes nous?</a>
             </li>
             <li id="cta-nav" class="nav-item">
-                <a id="cta-nav-link" class="text-button button button-primary-special-private" href="../app/" target="_blank" aria-label="Changer mon energie" tabindex="0">Changer mon energie</a>
+                <a id="cta-nav-link" class="text-button button button-primary-special-private" href="../app/" target="_blank" aria-label="Réaliser mon projet" tabindex="0">Réaliser mon projet</a>
             </li>
         </ul>
     </div>
