--- a/energie/index.html
+++ b/energie/index.html
@@ -71,16 +71,16 @@
                     <span id="services-title" class="drop-down-title text-clickable">Nos services</span><span class="drop-down-arrow"></span>
                 </div>
                 <ul id="drop-down-content">
-                    <li id="isolation" class="drop-down-item text-clickable"><a id="isolation-link" class="drop-down-item-link" href="../isolation/index.html" target="_blank" aria-label="Isoler ma maison" tabindex="0">Isoler ma maison</a></li>
-                    <li id="chauffage" class="drop-down-item text-clickable"><a id="chauffage-link" class="drop-down-item-link" href="../chauffage/index.html" target="_blank" aria-label="Installer des panneaux solaires" tabindex="0">Installer des panneaux solaires</a></li>
-                    <li id="energie" class="drop-down-item text-clickable"><a id="energie-link" class="drop-down-item-link" href="../energie/index.html" target="_blank" aria-label="Energie solaire" tabindex="0">Energie solaire</a></li>
+                    <li id="isolation" class="drop-down-item text-clickable"><a id="isolation-link" class="drop-down-item-link" href="../isolation/" target="_blank" aria-label="Isoler ma maison" tabindex="0">Isoler ma maison</a></li>
+                    <li id="chauffage" class="drop-down-item text-clickable"><a id="chauffage-link" class="drop-down-item-link" href="../chauffage/" target="_blank" aria-label="Installer des panneaux solaires" tabindex="0">Installer des panneaux solaires</a></li>
+                    <li id="energie" class="drop-down-item text-clickable"><a id="energie-link" class="drop-down-item-link" href="../energie/" target="_blank" aria-label="Energie solaire" tabindex="0">Energie solaire</a></li>
                 </ul>
             </li>
             <li id="about" class="nav-item">
-                <a id="about-link" class="text-clickable link" href="../about/index.html" target="_blank" tabindex="0" aria-label="Qui sommes nous?" onfocus="drop_down_services_out()">Qui sommes nous?</a>
+                <a id="about-link" class="text-clickable link" href="../about/" target="_blank" tabindex="0" aria-label="Qui sommes nous?" onfocus="drop_down_services_out()">Qui sommes nous?</a>
             </li>
             <li id="cta-nav" class="nav-item">
-                <a id="cta-nav-link" class="text-button button button-primary-special-private" href="../app/index.html" target="_blank" aria-label="Réaliser mon projet" tabindex="0">Réaliser mon projet</a>
+                <a id="cta-nav-link" class="text-button button button-primary-special-private" href="../app/" target="_blank" aria-label="Réaliser mon projet" tabindex="0">Réaliser mon projet</a>
             </li>
         </ul>
     </div>
@@ -90,7 +90,7 @@
             <div id="energie-body" class="section-body">
                 <h1 id="energie-title" class="text-big-header section-title">Un energie plus efficace et moins énergivore</h1>
                 <p id="section-description-energie" class="text-big-body section-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum rutrum lobortis mollis. Quisque lacinia lorem eget turpis iaculis, in lobortis nulla tincidunt.</p>
-                <a id="cta-energie" href="../app/index.html" class="text-button button button-primary-special-private section-cta">Installer des panneaux solaires</a>
+                <a id="cta-energie" href="../app/" class="text-button button button-primary-special-private section-cta">Installer des panneaux solaires</a>
             </div>
             <span class="section-image" id="section-image-energie"></span>
     </div>
@@ -101,7 +101,7 @@
         <ul id="footer-list">
             <li><a href="#" class="important-link text-footer" target="_blank" area-label="Mentions légales" tabindex="0">Mentions légales</a></li>
             <li><a href="#" class="important-link text-footer" target="_blank" area-label="Politique de la vie privée" tabindex="0">Politique de la vie privée</a></li>
-            <li><a href="../about/index.html" class="important-link text-footer" target="_blank" area-label="Qui sommes nous?" tabindex="0">Qui sommes nous?</a></li>
+            <li><a href="../about/" class="important-link text-footer" target="_blank" area-label="Qui sommes nous?" tabindex="0">Qui sommes nous?</a></li>
             <li><a href="#" class="important-link text-footer" target="_blank" area-label="Nous contacter" tabindex="0">Nous contacter</a></li>
         </ul>
         <small id="copyright-notice" class="text-footer">copyright &copy;2021</small>
