home page links

--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
                     <span id="services-title" class="drop-down-title text-clickable">Nos services</span><span class="drop-down-arrow"></span>
                 </div>
                 <ul id="drop-down-content">
-                    <li id="isolation" class="drop-down-item text-clickable"><a id="isolation-link" class="drop-down-item-link" href="/isolation/" target="_blank" aria-label="Isoler ma maison" tabindex="0">Isoler ma maison</a></li>
-                    <li id="chauffage" class="drop-down-item text-clickable"><a id="chauffage-link" class="drop-down-item-link" href="/chauffage/" target="_blank" aria-label="Changer mon chauffage" tabindex="0">Changer mon chauffage</a></li>
-                    <li id="energie" class="drop-down-item text-clickable"><a id="energie-link" class="drop-down-item-link" href="/energie/" target="_blank" aria-label="Energie solaire" tabindex="0">Energie solaire</a></li>
+                    <li id="isolation" class="drop-down-item text-clickable"><a id="isolation-link" class="drop-down-item-link" href="./isolation/" target="_blank" aria-label="Isoler ma maison" tabindex="0">Isoler ma maison</a></li>
+                    <li id="chauffage" class="drop-down-item text-clickable"><a id="chauffage-link" class="drop-down-item-link" href="./chauffage/" target="_blank" aria-label="Changer mon chauffage" tabindex="0">Changer mon chauffage</a></li>
+                    <li id="energie" class="drop-down-item text-clickable"><a id="energie-link" class="drop-down-item-link" href="./energie/" target="_blank" aria-label="Energie solaire" tabindex="0">Energie solaire</a></li>
                 </ul>
             </li>
             <li id="about" class="nav-item">
-                <a id="about-link" class="text-clickable link" href="/about/" target="_blank" tabindex="0" aria-label="Qui sommes nous?" onfocus="drop_down_services_out()">Qui sommes nous?</a>
+                <a id="about-link" class="text-clickable link" href="./about/" target="_blank" tabindex="0" aria-label="Qui sommes nous?" onfocus="drop_down_services_out()">Qui sommes nous?</a>
             </li>
             <li id="cta-nav" class="nav-item">
-                <a id="cta-nav-link" class="text-button button button-primary-special-private" href="app/index.html" target="_blank" aria-label="Réaliser mon projet" tabindex="0">Réaliser mon projet</a>
+                <a id="cta-nav-link" class="text-button button button-primary-special-private" href="./app/index.html" target="_blank" aria-label="Réaliser mon projet" tabindex="0">Réaliser mon projet</a>
             </li>
         </ul>
     </div>
@@ -128,19 +128,19 @@
                 <img src="images/visuals/isolation-illustration.svg" alt="isolation-illustration"/>
                 <h3 class="services-section-list-item-title text-small-header">Isolation thermique</h3>
                 <p class="services-section-list-item-description text-small-body">Votre maison sera moins énergivore avec nos produits.</p>
-                <a href="#" class="services-section-list-item-link text-clickable button button-secondary-normal aria-label="En savoir plus" tabindex="0";>En savoir plus</a>
+                <a href="./isolation/" class="services-section-list-item-link text-clickable button button-secondary-normal aria-label="En savoir plus" tabindex="0";>En savoir plus</a>
             </li>
             <li class="services-section-list-item">
                 <img src="images/visuals/chauffage-illustration.svg" alt="chauffage-illustration"/>
                 <h3 class="services-section-list-item-title text-small-header">Chauffage</h3>
                 <p class="services-section-list-item-description text-small-body">Votre maison sera moins énergivore avec nos produits.</p>
-                <a href="#" class="services-section-list-item-link text-clickable button button-secondary-normal" aria-label="En savoir plus" tabindex="0">En savoir plus</a>
+                <a href="./chauffage/" class="services-section-list-item-link text-clickable button button-secondary-normal" aria-label="En savoir plus" tabindex="0">En savoir plus</a>
             </li>
             <li class="services-section-list-item">
                 <img src="images/visuals/electricite-illustration.svg" alt="énergie-illustration"/>
                 <h3 class="services-section-list-item-title text-small-header">Energie solaire</h3>
                 <p class="services-section-list-item-description text-small-body">Votre maison sera moins énergivore avec nos produits.</p>
-                <a href="#" class="services-section-list-item-link text-clickable button button-secondary-normal" aria-label="En savoir plus" tabindex="0">En savoir plus</a>
+                <a href="./energie/" class="services-section-list-item-link text-clickable button button-secondary-normal" aria-label="En savoir plus" tabindex="0">En savoir plus</a>
             </li>
         </ul>
     </div>
@@ -230,7 +230,7 @@
         <ul id="footer-list">
             <li><a href="#" class="important-link text-footer" target="_blank" area-label="Mentions légales" tabindex="0">Mentions légales</a></li>
             <li><a href="#" class="important-link text-footer" target="_blank" area-label="Politique de la vie privée" tabindex="0">Politique de la vie privée</a></li>
-            <li><a href="/about/" class="important-link text-footer" target="_blank" area-label="Qui sommes nous?" tabindex="0">Qui sommes nous?</a></li>
+            <li><a href="./about/" class="important-link text-footer" target="_blank" area-label="Qui sommes nous?" tabindex="0">Qui sommes nous?</a></li>
             <li><a href="#" class="important-link text-footer" target="_blank" area-label="Nous contacter" tabindex="0">Nous contacter</a></li>
         </ul>
         <small id="copyright-notice" class="text-footer">copyright &copy;2021</small>
