leadgen last pages + buttons colors

--- a/app/index.html
+++ b/app/index.html
@@ -88,4 +88,5 @@
 </body>
 <script src="../scripts/update.js"></script>
 <script src="../scripts/input.js"></script>
+<script src="../scripts/pop-up.js"></script>
 </html>
