--- a/index.html
+++ b/index.html
@@ -128,19 +128,19 @@
                 <img src="images/visuals/isolation-illustration.svg" alt="isolation-illustration"/>
                 <h3 class="services-section-list-item-title text-small-header">Isolation thermique</h3>
                 <p class="services-section-list-item-description text-small-body">Votre maison sera moins énergivore avec nos produits.</p>
-                <a href="./isolation/" class="services-section-list-item-link text-clickable button button-secondary-normal aria-label="En savoir plus" tabindex="0";>En savoir plus</a>
+                <a href="./isolation/" class="services-section-list-item-link text-clickable button button-primary-normal-public aria-label="En savoir plus" tabindex="0";>En savoir plus</a>
             </li>
             <li class="services-section-list-item">
                 <img src="images/visuals/chauffage-illustration.svg" alt="chauffage-illustration"/>
                 <h3 class="services-section-list-item-title text-small-header">Chauffage</h3>
                 <p class="services-section-list-item-description text-small-body">Votre maison sera moins énergivore avec nos produits.</p>
-                <a href="./chauffage/" class="services-section-list-item-link text-clickable button button-secondary-normal" aria-label="En savoir plus" tabindex="0">En savoir plus</a>
+                <a href="./chauffage/" class="services-section-list-item-link text-clickable button button-primary-normal-public" aria-label="En savoir plus" tabindex="0">En savoir plus</a>
             </li>
             <li class="services-section-list-item">
                 <img src="images/visuals/electricite-illustration.svg" alt="énergie-illustration"/>
                 <h3 class="services-section-list-item-title text-small-header">Energie solaire</h3>
                 <p class="services-section-list-item-description text-small-body">Votre maison sera moins énergivore avec nos produits.</p>
-                <a href="./energie/" class="services-section-list-item-link text-clickable button button-secondary-normal" aria-label="En savoir plus" tabindex="0">En savoir plus</a>
+                <a href="./energie/" class="services-section-list-item-link text-clickable button button-primary-normal-public" aria-label="En savoir plus" tabindex="0">En savoir plus</a>
             </li>
         </ul>
     </div>
