--- a/app/index.html
+++ b/app/index.html
@@ -89,4 +89,5 @@
 <script src="../scripts/update.js"></script>
 <script src="../scripts/input.js"></script>
 <script src="../scripts/pop-up.js"></script>
+<script src="../scripts/cancel-app.js"></script>
 </html>
