minifying app-30 & app-31

--- a/app/app-31.html
+++ b/app/app-31.html
@@ -1,7 +1,5 @@
-<div id="app-31" class="input-choice input-drop-down-choice" data-button_right_function="window.location.href = '../';" data-title="Merci pour votre temps" data-description="" data-button_left="" data-button_left_type="button-display-none" data-button_right="Retourner à la page d'acceuil" data-button_right_type="button-primary-special-public" data-progress="100" data-evident_next_page="28">
-    <ul class="choices-box">
-        <div class="info-box">
-            <p class="text-big-body info-box-body">N'hésitez pas de nous contacter si vous changeriez d'avis<br/>Voici notre numero: <a href="tel:+3312345678" class="link">+33 11 34 56 78</a></p>
-        </div>
-    </ul>
+<div id="app-31" class="thanks-page" data-button_right_function="window.location.href = '../';" data-title="Merci pour votre temps" data-description="" data-button_left="" data-button_left_type="button-display-none" data-button_right="Retourner à la page d'acceuil" data-button_right_type="button-primary-special-public" data-progress="100" data-evident_next_page="">
+    <div class="info-box">
+        <p class="text-big-body info-box-body">N'hésitez pas de nous contacter si vous changeriez d'avis<br/>Voici notre numero: <a href="tel:+3312345678" class="link">+33 11 34 56 78</a></p>
+    </div>
 </div>
