name-value pairs for app pages + json template

--- a/app/app-13.html
+++ b/app/app-13.html
@@ -1,14 +1,14 @@
-<div id="app-13" class="input-choice input-drop-down-choice" data-title="Veuillez choisir votre département" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="14" data-evident_next_page="14">
+<div id="app-13" name="solaire_departement" class="input-choice input-drop-down-choice" data-title="Veuillez choisir votre département" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="14" data-evident_next_page="14">
     <ul class="choices-box">
         <form class="input-drop-down-form" id="department-form" action="" >
             <div class="input-box input-drop-down-box">
                 <label id="department-input-label" for="department-input" class="text-label input-label">N° de Département</label>
                 <select name="department-input" id="department-input" class="text-clickable input input-drop-down" onchange="input_validation(this); update_app(this)">
                     <option class="input-drop-down-choice text-clickable" value="0">&nbsp;&nbsp;veuilliez selecionner un choix</option>
-                    <option class="input-drop-down-choice text-clickable" value="1">&nbsp;&nbsp;01 - paris</option>
-                    <option class="input-drop-down-choice text-clickable" value="2">&nbsp;&nbsp;02 - paris</option>
-                    <option class="input-drop-down-choice text-clickable" value="3">&nbsp;&nbsp;03 - paris</option>
-                    <option class="input-drop-down-choice text-clickable" value="4">&nbsp;&nbsp;04 - paris</option>
+                    <option class="input-drop-down-choice text-clickable" value="01-paris">&nbsp;&nbsp;01 - paris</option>
+                    <option class="input-drop-down-choice text-clickable" value="02-paris">&nbsp;&nbsp;02 - paris</option>
+                    <option class="input-drop-down-choice text-clickable" value="03-paris">&nbsp;&nbsp;03 - paris</option>
+                    <option class="input-drop-down-choice text-clickable" value="04-paris">&nbsp;&nbsp;04 - paris</option>
                 </select>
             </div>
         </form>
