--- a/app/app-16.html
+++ b/app/app-16.html
@@ -1,18 +1,18 @@
-<div id="app-16" class="radio-choices" data-title="Veuillez sélectionner le type  de votre toit" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="57" data-evident_next_page="17">
+<div id="app-16" class="radio-choices" name="solaire_toit" data-title="Veuillez sélectionner le type  de votre toit" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="57" data-evident_next_page="17">
     <ul class="choices-box">
-        <li class="choice radio-choice" data-order="1" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
+        <li class="choice radio-choice" value="ardoise" data-order="1" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="ardoise"></span>
             <span class="choice-caption text-clickable">Ardoise</span>
         </li>
-        <li class="choice radio-choice" data-order="2" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
+        <li class="choice radio-choice" value="acier" data-order="2" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="acier"></span>
             <span class="choice-caption text-clickable">Acier</span>
         </li>
-        <li class="choice radio-choice" data-order="3" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
+        <li class="choice radio-choice" value="tuile" data-order="3" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="tuile"></span>
             <span class="choice-caption text-clickable">Tuile</span>
         </li>
-        <li class="choice radio-choice" data-order="4" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
+        <li class="choice radio-choice" value="autre" data-order="4" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="autre"></span>
             <span class="choice-caption text-clickable">Autre</span>
         </li>
