--- a/app/app-18.html
+++ b/app/app-18.html
@@ -1,14 +1,14 @@
-<div id="app-18" class="input-choice input-drop-down-choice" data-title="Veuillez préciser le montant approximatif de votre facture d'électricité" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="confirmer" data-button_right_type="button-primary-special-private" data-progress="85" data-evident_next_page="19">
+<div id="app-18" class="input-choice input-drop-down-choice" name="solaire-facture" data-title="Veuillez préciser le montant approximatif de votre facture d'électricité" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="confirmer" data-button_right_type="button-primary-special-private" data-progress="85" data-evident_next_page="19">
     <ul class="choices-box">
         <form class="input-drop-down-form" id="facture-form" action="" >
             <div class="input-box input-drop-down-box">
                 <label id="facture-input-label" for="facture-input" class="text-label input-label">Montant de la facture d'électricité</label>
                 <select name="facture-input" id="facture-input" class="text-clickable input input-drop-down" onchange="input_validation(this); update_app(this)">
                     <option class="input-drop-down-choice text-clickable" value="0">&nbsp;&nbsp;veuilliez selecionner un choix</option>
-                    <option class="input-drop-down-choice text-clickable" value="1">&nbsp;&nbsp;inférieur à 700€</option>
-                    <option class="input-drop-down-choice text-clickable" value="2">&nbsp;&nbsp;entre 700€ et 1500€</option>
-                    <option class="input-drop-down-choice text-clickable" value="3">&nbsp;&nbsp;entre 1500€ et 2000€</option>
-                    <option class="input-drop-down-choice text-clickable" value="4">&nbsp;&nbsp;supérieur à 2000€</option>
+                    <option class="input-drop-down-choice text-clickable" value="inferieur-700">&nbsp;&nbsp;inférieur à 700€</option>
+                    <option class="input-drop-down-choice text-clickable" value="entre-700-1500">&nbsp;&nbsp;entre 700€ et 1500€</option>
+                    <option class="input-drop-down-choice text-clickable" value="entre-1500-2000">&nbsp;&nbsp;entre 1500€ et 2000€</option>
+                    <option class="input-drop-down-choice text-clickable" value="superieur-2000">&nbsp;&nbsp;supérieur à 2000€</option>
                 </select>
             </div>
         </form>
