--- a/app/app-23.html
+++ b/app/app-23.html
@@ -1,10 +1,10 @@
-<div id="app-23" class="radio-choices" data-title="Avez-vous une imposition commune?" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="28" data-evident_next_page="24">
+<div id="app-23" class="radio-choices" name="eligibilite_imposition_commune" data-title="Avez-vous une imposition commune?" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="28" data-evident_next_page="24">
     <ul class="choices-box">
-        <li class="choice radio-choice" data-order="1" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
+        <li class="choice radio-choice" value="true" data-order="1" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="oui"></span>
             <span class="choice-caption text-clickable">Oui</span>
         </li>
-        <li class="choice radio-choice" data-order="2" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
+        <li class="choice radio-choice" value="false" data-order="2" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="non"></span>
             <span class="choice-caption text-clickable">Non</span>
         </li>
