--- a/app/app-8.html
+++ b/app/app-8.html
@@ -1,18 +1,18 @@
-<div id="app-8" class="multiple-choices" data-title="Quelle(s) zone(s) souhaitez vous isoler?" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="50" data-evident_next_page="12">
+<div id="app-8" class="multiple-choices" name="isolation_zone" data-title="Quelle(s) zone(s) souhaitez vous isoler?" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="50" data-evident_next_page="12">
     <ul class="choices-box">
-        <li class="choice multiple-choice" data-order="1" data-go_to="9" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
+        <li class="choice multiple-choice" value="comble" data-order="1" data-go_to="9" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="comble"></span>
             <span class="choice-caption text-clickable">Comble</span>
         </li>
-        <li class="choice multiple-choice" data-order="2" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
+        <li class="choice multiple-choice" value="plafond" data-order="2" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="plafond-maison"></span>
             <span class="choice-caption text-clickable">Plafond</span>
         </li>
-        <li class="choice multiple-choice" data-order="3" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
+        <li class="choice multiple-choice" value="murs" data-order="3" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="murs-maison"></span>
             <span class="choice-caption text-clickable">Murs</span>
         </li>
-        <li class="choice multiple-choice" data-order="4" data-go_to="10" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
+        <li class="choice multiple-choice" value="plancher" data-order="4" data-go_to="10" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="plancher-maison"></span>
             <span class="choice-caption text-clickable">Plancher</span>
         </li>
