--- a/app/app-1.html
+++ b/app/app-1.html
@@ -1,14 +1,14 @@
-<div id="app-1" class="radio-choices" data-title="Veuillez sélectionner votre service désiré" data-description="" data-button_left="" data-button_left_type="button-display-none" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="0" data-evident_next_page="19">
+<div id="app-1" name="service" class="radio-choices" data-title="Veuillez sélectionner votre service désiré" data-description="" data-button_left="" data-button_left_type="button-display-none" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="0" data-evident_next_page="19">
     <ul class="choices-box">
-        <li class="choice radio-choice" data-order="1" data-go_to="2" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
+        <li class="choice radio-choice" value="chauffage" data-order="1" data-go_to="2" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="chauffage"></span>
             <span class="choice-caption text-clickable">Installation des pompes à chaleur</span>
         </li>
-        <li class="choice radio-choice" data-order="2" data-go_to="7" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
+        <li class="choice radio-choice" value="isolation" data-order="2" data-go_to="7" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="isolation"></span>
             <span class="choice-caption text-clickable">Isolation thermique des maisons</span>
         </li>
-        <li class="choice radio-choice" data-order="3" data-go_to="13" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
+        <li class="choice radio-choice" value="solaire" data-order="3" data-go_to="13" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="energie-solaire"></span>
             <span class="choice-caption text-clickable">Installation des panneaux solaires</span>
         </li>
