--- a/app/app-15.html
+++ b/app/app-15.html
@@ -1,14 +1,14 @@
-<div id="app-15" class="radio-choices" data-title="Quelle est l'inclinaison de votre toit?" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="42"  data-evident_next_page="16">
+<div id="app-15" class="radio-choices" name="solaire_inclinaison" data-title="Quelle est l'inclinaison de votre toit?" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="42"  data-evident_next_page="16">
     <ul class="choices-box">
-        <li class="choice radio-choice" data-order="1" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
+        <li class="choice radio-choice" value="15-degree" data-order="1" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="15-degree"></span>
             <span class="choice-caption text-clickable">15°</span>
         </li>
-        <li class="choice radio-choice" data-order="2" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
+        <li class="choice radio-choice" value="30-degree" data-order="2" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="30-degree"></span>
             <span class="choice-caption text-clickable">30°</span>
         </li>
-        <li class="choice radio-choice" data-order="3" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
+        <li class="choice radio-choice" value="45-degree" data-order="3" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="45-degree"></span>
             <span class="choice-caption text-clickable">45°</span>
         </li>
