--- a/app/app-17.html
+++ b/app/app-17.html
@@ -1,14 +1,14 @@
-<div id="app-17" class="input-choice input-drop-down-choice" data-title="Veuillez selectionner la surface que vous estimez disponible sur votre toit" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="71" data-evident_next_page="18">
+<div id="app-17" class="input-choice input-drop-down-choice" name="solaire_surface" data-title="Veuillez selectionner la surface que vous estimez disponible sur votre toit" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="71" data-evident_next_page="18">
     <ul class="choices-box">
         <form class="input-drop-down-form" id="surface-toit-form" action="" >
             <div class="input-drop-down-box input-box">
                 <label id="surface-toit-input-label" for="surface-toit-input" class="text-label input-label">Surface Disponible</label>
                 <select name="surface-toit-input" id="surface-toit-input" class="text-clickable input input-drop-down" onchange="input_validation(this); update_app(this)">
                     <option class="input-drop-down-choice text-clickable" value="0">&nbsp;&nbsp;veuilliez selecionner un choix</option>
-                    <option class="input-drop-down-choice text-clickable" value="1">&nbsp;&nbsp;15m²</option>
-                    <option class="input-drop-down-choice text-clickable" value="2">&nbsp;&nbsp;20m²</option>
-                    <option class="input-drop-down-choice text-clickable" value="3">&nbsp;&nbsp;30m²</option>
-                    <option class="input-drop-down-choice text-clickable" value="4">&nbsp;&nbsp;40m²</option>
+                    <option class="input-drop-down-choice text-clickable" value="15m²">&nbsp;&nbsp;15m²</option>
+                    <option class="input-drop-down-choice text-clickable" value="20m²">&nbsp;&nbsp;20m²</option>
+                    <option class="input-drop-down-choice text-clickable" value="30m²">&nbsp;&nbsp;30m²</option>
+                    <option class="input-drop-down-choice text-clickable" value="40m²">&nbsp;&nbsp;40m²</option>
                 </select>
             </div>
         </form>
