--- a/app/app-19.html
+++ b/app/app-19.html
@@ -1,10 +1,10 @@
-<div id="app-19" class="radio-choices" data-title="Voulez vous tester votre éligibilité à l'aide financière de rénovation énergitique?" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="100" data-evident_next_page="28">
+<div id="app-19" class="radio-choices" name="eligibilite" data-title="Voulez vous tester votre éligibilité à l'aide financière de rénovation énergitique?" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="100" data-evident_next_page="28">
     <ul class="choices-box">
-        <li class="choice radio-choice" data-order="1" data-go_to="20" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
+        <li class="choice radio-choice" value="true" data-order="1" data-go_to="20" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="oui"></span>
             <span class="choice-caption text-clickable">Oui</span>
         </li>
-        <li class="choice radio-choice" data-order="2" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
+        <li class="choice radio-choice" value="false" data-order="2" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="non"></span>
             <span class="choice-caption text-clickable">Non, merci</span>
         </li>
