--- a/app/app-2.html
+++ b/app/app-2.html
@@ -1,10 +1,10 @@
-<div id="app-2" class="radio-choices" data-title="Veuillez sélectionner le type de votre logement" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="33" data-evident_next_page="3">
+<div id="app-2" name="logement" class="radio-choices" data-title="Veuillez sélectionner le type de votre logement" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="33" data-evident_next_page="3">
     <ul class="choices-box">
-        <li class="choice radio-choice" data-order="1" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
+        <li class="choice radio-choice" value="maison" data-order="1" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="maison"></span>
             <span class="choice-caption text-clickable">Maison</span>
         </li>
-        <li class="choice radio-choice" data-order="2" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
+        <li class="choice radio-choice" value="appartement" data-order="2" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="appartement"></span>
             <span class="choice-caption text-clickable">Appartement</span>
         </li>
