--- a/app/app-26.html
+++ b/app/app-26.html
@@ -1,14 +1,14 @@
-<div id="app-26" class="input-choice input-drop-down-choice" data-title="Veuillez sélectionner la tranche où se situent vos revenus fiscaux" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="71" data-evident_next_page="27">
+<div id="app-26" class="input-choice input-drop-down-choice" name="eligibilite_revenues" data-title="Veuillez sélectionner la tranche où se situent vos revenus fiscaux" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="71" data-evident_next_page="27">
     <ul class="choices-box">
         <form class="input-drop-down-form" id="revenues-form" action="" >
             <div class="input-box input-drop-down-box">
                 <label id="revenues-input-label" for="revenues-input" class="text-label input-label">Revenues fiscaux</label>
                 <select name="revenues-input" id="revenues-input" class="text-clickable input input-drop-down" onchange="input_validation(this); update_app(this)">
                     <option class="input-drop-down-choice text-clickable" value="0">&nbsp;&nbsp;veuilliez selecionner un choix</option>
-                    <option class="input-drop-down-choice text-clickable" value="1">&nbsp;&nbsp;inférieurs à A</option>
-                    <option class="input-drop-down-choice text-clickable" value="2">&nbsp;&nbsp;entre A et B</option>
-                    <option class="input-drop-down-choice text-clickable" value="3">&nbsp;&nbsp;entre B et C</option>
-                    <option class="input-drop-down-choice text-clickable" value="4">&nbsp;&nbsp;supérieurs à C</option>
+                    <option class="input-drop-down-choice text-clickable" value="inferieur-a">&nbsp;&nbsp;inférieurs à A</option>
+                    <option class="input-drop-down-choice text-clickable" value="entre-a-b">&nbsp;&nbsp;entre A et B</option>
+                    <option class="input-drop-down-choice text-clickable" value="entre-b-c">&nbsp;&nbsp;entre B et C</option>
+                    <option class="input-drop-down-choice text-clickable" value="superieur-c">&nbsp;&nbsp;supérieurs à C</option>
                 </select>
             </div>
         </form>
