--- a/app/app-28.html
+++ b/app/app-28.html
@@ -1,19 +1,19 @@
-<div id="app-28" class="input-choice input-multiple-choice" data-title="Veuillez entrer vos informations de contact" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="confirmer" data-button_right_type="button-primary-special-private" data-progress="100" data-evident_next_page="29">
+<div id="app-28" class="input-choice input-multiple-choice" name="info" data-title="Veuillez entrer vos informations de contact" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="confirmer" data-button_right_type="button-primary-special-private" data-progress="100" data-evident_next_page="29">
     <ul class="choices-box">
         <form class="input-multiple-form" id="information-form" action="">
             <div class="input-box input-text-box">
                 <label id="user-name-input-label" for="user-name-input" class="text-label input-label input-label-required">Votre nom complet<span class="required-asterisk">*</span></label>
-                <input type="text" name="user-name-input" id="user-name-input" class="text-input input input-text" placeholder="Nom Prénom" oninput="input_validation(this); update_app(this)">
+                <input type="text" name="nom" id="user-name-input" class="text-input input input-text" placeholder="Nom Prénom" oninput="input_validation(this); update_app(this)">
                 <p id="user-name-input-hint" class="text-input-hint input-hint">Ce champs est requis.</p>
             </div>
             <div class="input-box input-email-box">
                 <label id="user-email-input-label" for="user-email-input" class="text-label input-label input-label-required">Votre email<span class="required-asterisk">*</span></label>
-                <input type="email" name="user-email-input" id="user-email-input" class="text-input input input-email" placeholder="exemple@exemple.com" onchange="input_validation(this); update_app(this)">
+                <input type="email" name="email" id="user-email-input" class="text-input input input-email" placeholder="exemple@exemple.com" onchange="input_validation(this); update_app(this)">
                 <p id="user-email-input-hint" class="text-input-hint input-hint">Entrer une adresse électronique valide.</p>
             </div>
             <div class="input-box input-number-box">
                 <label id="user-phone-input-label" for="user-phone-input" class="text-label input-label input-label-required">Votre numéro de téléphone<span class="required-asterisk">*</span></label>
-                <input type="number" name="user-phone-input" id="user-phone-input" class="text-input input input-phone" placeholder="0033xxxxxxxx ou 0xxxxxxxxx" onchange="input_validation(this); update_app(this)">
+                <input type="number" name="telephone" id="user-phone-input" class="text-input input input-phone" placeholder="0033xxxxxxxx ou 0xxxxxxxxx" onchange="input_validation(this); update_app(this)">
                 <p id="user-phone-input-hint" class="text-input-hint input-hint">Entrer un numéro de téléphone valide.</p>
             </div>
             <div class="input-box input-check-box">
