--- a/app/app-6.html
+++ b/app/app-6.html
@@ -1,14 +1,14 @@
-<div id="app-6" class="multiple-choices" data-title="Quel(s) équipement(s) de chauffage vous utilisez?" data-description="Vous pouvez sélectionner plusieurs choix" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="confirmer" data-button_right_type="button-primary-special-private" data-progress="66" data-evident_next_page="19">
+<div id="app-6" class="multiple-choices" name="chauffage_materiel" data-title="Quel(s) équipement(s) de chauffage vous utilisez?" data-description="Vous pouvez sélectionner plusieurs choix" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="confirmer" data-button_right_type="button-primary-special-private" data-progress="66" data-evident_next_page="19">
     <ul class="choices-box">
-        <li class="choice multiple-choice" data-order="1" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
+        <li class="choice multiple-choice" value="chaudiere-electricite" data-order="1" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="chaudiere-electricite"></span>
             <span class="choice-caption text-clickable">Chaudière</span>
         </li>
-        <li class="choice multiple-choice" data-order="2" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
+        <li class="choice multiple-choice" value="radiateur-electricite" data-order="2" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="radiateur-electricite"></span>
             <span class="choice-caption text-clickable">Radiateur</span>
         </li>
-        <li class="choice multiple-choice" data-order="3" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
+        <li class="choice multiple-choice" value="ppc-electricite" data-order="3" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="ppc-electricite"></span>
             <span class="choice-caption text-clickable">Plafond et (ou) Plancher Chauffant</span>
         </li>
