--- a/app/app-9.html
+++ b/app/app-9.html
@@ -1,10 +1,11 @@
-<div id="app-9" class="radio-choices" data-title="Quel est le type de votre comble?" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="50" data-evident_next_page="12">
+    "isolation_logement": "",
+    <div id="app-9" class="radio-choices" name="isolation_comble" data-title="Quel est le type de votre comble?" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="50" data-evident_next_page="12">
     <ul class="choices-box">
-        <li class="choice radio-choice" data-order="1" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
+        <li class="choice radio-choice" value="perdu" data-order="1" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="comble-perdu"></span>
             <span class="choice-caption text-clickable">Comble perdu</span>
         </li>
-        <li class="choice radio-choice" data-order="2" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
+        <li class="choice radio-choice" value="amenage" data-order="2" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="comble-amenage"></span>
             <span class="choice-caption text-clickable">Comble aménagé</span>
         </li>
