--- a/energie/index.html
+++ b/energie/index.html
@@ -72,7 +72,7 @@
                 </div>
                 <ul id="drop-down-content">
                     <li id="isolation" class="drop-down-item text-clickable"><a id="isolation-link" class="drop-down-item-link" href="../isolation/" target="_blank" aria-label="Isoler ma maison" tabindex="0">Isoler ma maison</a></li>
-                    <li id="chauffage" class="drop-down-item text-clickable"><a id="chauffage-link" class="drop-down-item-link" href="../chauffage/" target="_blank" aria-label="Installer des panneaux solaires" tabindex="0">Installer des panneaux solaires</a></li>
+                    <li id="chauffage" class="drop-down-item text-clickable"><a id="chauffage-link" class="drop-down-item-link" href="../chauffage/" target="_blank" aria-label="Changer mon chauffage" tabindex="0">Changer mon chauffage</a></li>
                     <li id="energie" class="drop-down-item text-clickable"><a id="energie-link" class="drop-down-item-link" href="../energie/" target="_blank" aria-label="Energie solaire" tabindex="0">Energie solaire</a></li>
                 </ul>
             </li>
