phone placeholder typo (+x)

--- a/app/app-28.html
+++ b/app/app-28.html
@@ -13,7 +13,7 @@
             </div>
             <div class="input-box input-number-box">
                 <label id="user-phone-input-label" for="user-phone-input" class="text-label input-label input-label-required">Votre numéro de téléphone<span class="required-asterisk">*</span></label>
-                <input type="number" name="telephone" id="user-phone-input" class="text-input input input-phone" placeholder="0033xxxxxxxx ou 0xxxxxxxxx" onchange="input_validation(this); update_app(this)">
+                <input type="number" name="telephone" id="user-phone-input" class="text-input input input-phone" placeholder="0033xxxxxxxxx ou 0xxxxxxxxx" onchange="input_validation(this); update_app(this)">
                 <p id="user-phone-input-hint" class="text-input-hint input-hint">Entrer un numéro de téléphone valide.</p>
             </div>
             <div class="input-box input-check-box">
